--- a/public/articles-news.html
+++ b/public/articles-news.html
@@ -4,9 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Delivery and payment</title>
+    <title>Product Card</title>
   </head>
 
   <body>
@@ -180,69 +179,274 @@
           </div>
         </div>
         <!-- Path -->
-        <div class="flex items-center gap-1 md:gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
+        <div class="flex items-center gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
           <span class="text-brand-black-300">Главная</span>
           <img src="./img/icon-pathblack.svg" alt="Path icon" />
-          <span class="line-clamp-1">Доставка и оплата</span>
+          <span class="line-clamp-1">Статьи</span>
         </div>
       </nav>
     </header>
+
     <!-- MAIN -->
     <main>
-      <section class="max-w-base mx-auto mt-6 px-4 md:px-7">
-        <div class="bg-white rounded-md p-4 md:px-8 md:py-10">
-          <h3>Доставка и оплата</h3>
-          <ul class="text-xs lg:text-15 mt-4 space-y-4">
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-            <li>
-              <p>
-                Вы можете оформить заказ на сумму от 600 рублей, мы доставим его в любой город до пункта выдачи или до
-                двери.
-                <br><br class="hidden lg:block">
-                Стоимость доставки рассчитывается автоматически в корзине и зависит от вашего города, суммы и веса
-                заказа.
-                Почти всегда доставляем бесплатно.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
+      <div class="max-w-base mx-auto px-4 md:px-7">
+        <!-- News And Posts For SEO -->
+        <section class="mt-6">
+          <h2>Новости и записи для сео</h2>
+          <div class="grid xs:grid-cols-2 md:grid-cols-3 gap-5 lg:gap-30 mt-6 lg:mt-10 pb-1.5">
+            <!-- Item 1 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__1.png" alt="image-post__1">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 2 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__2.png" alt="image-post__2">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 3 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__3.png" alt="image-post__3">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 4 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__1.png" alt="image-post__4">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 5 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__1.png" alt="image-post__1">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 6 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__2.png" alt="image-post__2">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 7 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__3.png" alt="image-post__3">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 8 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__1.png" alt="image-post__4">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+            <!-- Item 9 -->
+            <a href="#" class="bg-white group rounded-md overflow-hidden">
+              <div class="w-full aspect-video md:aspect-[350/256] overflow-hidden">
+                <img class="size-full object-cover transition duration-200 group-hover:scale-105"
+                  src="./img/image-post__1.png" alt="image-post__4">
+              </div>
+              <div class="pt-2 p-4">
+                <span class="text-xs text-brand-black-300">10.10.2022</span>
+                <h5 class="font-medium line-clamp-1">Стерилизация и дезинфекция</h5>
+                <p class="text-brand-black-400 text-xs lg:text-15 line-clamp-3 mt-2">
+                  Стерилизация и дезинфекция — важные этапы обработки инструментов, позволяющие сделать любые...
+                </p>
+                <div class="flex items-center gap-3 mt-4">
+                  <span class="transition duration-200 group-hover:text-brand-black-300">Читать статью</span>
+                  <svg
+                    class="shrink-0 relative transition duration-200 group-hover:translate-x-2 group-hover:text-brand-black-300"
+                    width="17" height="8" viewBox="0 0 17 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.75 4.25L0.250008 4.25" stroke="currentColor" stroke-width="1.00088"
+                      stroke-linejoin="round" />
+                    <path d="M13.25 1.25C14.4216 2.42157 15.0784 3.07843 16.25 4.25L13.25 7.25" stroke="currentColor"
+                      stroke-width="1.00088" stroke-linejoin="round" />
+                  </svg>
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- Paginatin -->
+          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-xs lg:text-15 border rounded-md overflow-hidden mt-5 lg:mt-8 mx-auto">
+            <!-- Previous -->
+            <button
+              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
+            <!-- Next btn -->
+            <button
+              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
+          </div>
+        </section>
+      </div>
     </main>
     <!-- FOOTER -->
     <footer class="max-w-base mx-auto px-4 md:px-7 pb-4 mt-10 lg:mt-14">
       <div class="bg-white rounded-md p-4 md:p-6 lg:p-0 lg:px-30 lg:pt-14 lg:pb-6">
         <!-- Logo  -->
         <div>
-          <a href="#">
+          <a class="w-max" href="#">
             <img class="h-6 lg:h-8" src="./img/icon-logo.svg" alt="logo footer">
           </a>
         </div>
