--- a/public/catalog.html
+++ b/public/catalog.html
@@ -179,7 +179,7 @@
           </div>
         </div>
         <!-- Path -->
-        <div class="flex items-center gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
+        <div class="flex items-center gap-1 md:gap-2 text-xs sm:text-sm/4 mt-4 md:mt-6">
           <span class="text-brand-black-300">Главная</span>
           <img src="./img/icon-pathgray.svg" alt="Path icon" />
           <span class="text-brand-black-300">Главная</span>
