--- a/public/catalog.html
+++ b/public/catalog.html
@@ -258,10 +258,46 @@
           <!-- Title -->
           <div>
             <h2>Второй заголовок</h2>
+            <div class="overflow-x-auto no-scroll flex items-center gap-1 whitespace-nowrap text-brand-black-400 mt-4">
+              <!-- 1 -->
+              <button class="h-6 bg-white flex items-center gap-1 rounded px-2">
+                <svg width="12" height="14" viewBox="0 0 12 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M2.25977 4.58594C1.59961 5.73698 1.2526 6.81185 1.21875 7.81055C1.2526 9.14779 1.68424 10.2396 2.51367 11.0859C3.3431 11.9323 4.40104 12.3724 5.6875 12.4062C6.95703 12.3724 8.00651 11.9323 8.83594 11.0859C9.68229 10.2396 10.1224 9.14779 10.1562 7.81055C10.1393 7.01497 9.89388 6.10938 9.41992 5.09375C8.97982 4.16276 8.4974 3.41797 7.97266 2.85938C7.87109 2.97786 7.7526 3.13867 7.61719 3.3418C7.58333 3.37565 7.55794 3.40951 7.54102 3.44336C7.49023 3.51107 7.44792 3.57031 7.41406 3.62109C7.38021 3.67188 7.35482 3.71419 7.33789 3.74805C7.23633 3.86654 7.16016 3.97656 7.10938 4.07812C6.97396 4.23047 6.81315 4.30664 6.62695 4.30664C6.42383 4.30664 6.26302 4.23047 6.14453 4.07812C6.09375 4.02734 6.04297 3.9681 5.99219 3.90039C5.94141 3.84961 5.89909 3.79036 5.86523 3.72266C5.84831 3.70573 5.83138 3.6888 5.81445 3.67188C5.57747 3.35026 5.32357 3.03711 5.05273 2.73242C4.79883 2.41081 4.56185 2.13151 4.3418 1.89453C3.59701 2.60547 2.90299 3.5026 2.25977 4.58594ZM5.07812 0.929688C5.3151 1.14974 5.56055 1.42057 5.81445 1.74219C6.08529 2.0638 6.33919 2.37695 6.57617 2.68164L6.60156 2.63086C6.80469 2.3431 7.01628 2.08919 7.23633 1.86914C7.45638 1.66602 7.70182 1.56445 7.97266 1.56445C8.24349 1.56445 8.48893 1.66602 8.70898 1.86914C9.04753 2.20768 9.3776 2.61393 9.69922 3.08789C10.0039 3.56185 10.2832 4.0612 10.5371 4.58594C10.791 5.11068 10.9941 5.65234 11.1465 6.21094C11.2988 6.76953 11.375 7.30273 11.375 7.81055C11.3411 9.4694 10.791 10.8405 9.72461 11.9238C8.6582 13.0241 7.3125 13.5911 5.6875 13.625C4.04557 13.5911 2.69987 13.0241 1.65039 11.9238C0.583984 10.8405 0.0338542 9.4694 0 7.81055C0 7.16732 0.11849 6.52409 0.355469 5.88086C0.575521 5.2207 0.863281 4.5944 1.21875 4.00195C1.55729 3.39258 1.93815 2.82552 2.36133 2.30078C2.76758 1.75911 3.18229 1.30208 3.60547 0.929688C3.82552 0.726562 4.07096 0.625 4.3418 0.625C4.61263 0.625 4.85807 0.726562 5.07812 0.929688ZM5.73828 11.1875C4.90885 11.1875 4.22331 10.9421 3.68164 10.4512C3.13997 9.97721 2.86068 9.30013 2.84375 8.41992C2.84375 8.04753 2.95378 7.66667 3.17383 7.27734C3.37695 6.88802 3.69857 6.42253 4.13867 5.88086C4.3418 5.69466 4.54492 5.70312 4.74805 5.90625C4.98503 6.19401 5.25586 6.53255 5.56055 6.92188C5.86523 7.3112 6.1276 7.64128 6.34766 7.91211C6.55078 8.11523 6.76237 8.1237 6.98242 7.9375L7.61719 7.20117C7.83724 6.99805 8.0319 7.01497 8.20117 7.25195C8.50586 7.86133 8.59896 8.47917 8.48047 9.10547C8.34505 9.7487 8.01497 10.265 7.49023 10.6543C6.94857 11.0098 6.36458 11.1875 5.73828 11.1875Z"
+                    fill="#EB5757" />
+                </svg>
+                <span class="text-13/4">Популярное</span>
+              </button>
+              <!-- 2 -->
+              <button class="h-6 bg-white rounded px-2">
+                <span class="text-13/4">Рекомендуемое</span>
+              </button>
+              <!-- 3 -->
+              <button class="h-6 bg-white rounded px-2">
+                <span class="text-13/4">Новое</span>
+              </button>
+              <!-- 4 -->
+              <button class="h-6 bg-white rounded px-2">
+                <span class="text-13/4">Сорт месяца</span>
+              </button>
+              <!--5 -->
+              <button class="h-6 bg-white rounded px-2">
+                <span class="text-13/4">Фруктовый</span>
+              </button>
+            </div>
+            <!--  -->
+            <button class="font-medium lg:hidden flex items-center mt-3">
+              <svg class="shrink-0" width="18" height="18" viewBox="0 0 18 18" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 14L10.9994 12M17 1H1V3.99957L7 8.49945V17L10.9994 15L10.9999 8.49951L17 3.99957V1Z"
+                  stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              Фильтры
+            </button>
           </div>
           <div class="flex gap-30 mt-4 lg:mt-6">
             <!-- Items -->
-            <div class="flex-1 grid grid-cols-2 sm:grid-cols-3 gap-4 lg:gap-30">
+            <div class="flex-1 grid grid-cols-2 sm:grid-cols-3 gap-y-6 gap-x-4 lg:gap-x-30">
               <!-- Item 1 -->
               <div class="bg-white rounded-md px-2 lg:px-4 py-3 lg:py-4 lg:pb-5">
                 <div class="flex justify-between gap-5">
@@ -756,7 +792,27 @@
               </div>
             </div>
             <!-- Filters -->
-            <div class="max-w-[15.9375rem] w-full h-40 bg-white rounded-md"></div>
+            <div class="max-w-[15.9375rem] w-full h-40 bg-white text-[#2E2E2E] rounded-md pt-2.5">
+              <!-- 1 -->
+              <div>
+                <button class="w-full flex items-center justify-between rounded-md p-4">
+                  <span class="font-semibold text-sm">Категория</span>
+                  <svg class="shrink-0" width="11" height="7" viewBox="0 0 11 7" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M5.12109 0.496094C5.30339 0.332031 5.51302 0.25 5.75 0.25C5.98698 0.25 6.19661 0.332031 6.37891 0.496094L10.7539 4.87109C10.918 5.05339 11 5.26302 11 5.5C11 5.73698 10.918 5.94661 10.7539 6.12891C10.5716 6.29297 10.362 6.375 10.125 6.375C9.88802 6.375 9.67839 6.29297 9.49609 6.12891L5.75 2.35547L2.00391 6.12891C1.82161 6.29297 1.61198 6.375 1.375 6.375C1.13802 6.375 0.928385 6.29297 0.746094 6.12891C0.582031 5.94661 0.5 5.73698 0.5 5.5C0.5 5.26302 0.582031 5.05339 0.746094 4.87109L5.12109 0.496094Z"
+                      fill="#2E2E2E" />
+                  </svg>
+                </button>
+                <div class="px-4">
+                  <div class="flex items-center gap-2">
+                    <input type="checkbox" id="test1" checked>
+                    <label for="test1"></label>
+                    <label for="test1" class="text-sm">Черный чай</label>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
 
