--- a/public/index.html
+++ b/public/index.html
@@ -192,63 +192,73 @@
           </div>
         </section>
         <!-- Catalog -->
-        <section class="pt-10 lg:pt-14">
+        <section class="mt-6">
           <h2>Каталог</h2>
           <!-- Items -->
-          <div class="grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 gap-y-4 gap-x-4 lg:gap-x-30 mt-4 lg:mt-6">
+          <div
+            class="grid grid-cols-2 sm:grid-cols-3 xl:grid-cols-4 items-start gap-y-4 gap-x-4 lg:gap-x-30 mt-4 lg:mt-6">
             <!-- Item 1 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Черный чай</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__1.svg" alt="icon-catalog__1">
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3">
+                <p class="font-semibold text-15">Черный чай</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__1.svg" alt="icon-catalog__1">
+              </div>
             </div>
             <!-- Item 2 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Зеленый чай</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__2">
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class=" flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3">
+                <p class="font-semibold text-15">Зеленый чай</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__2">
+              </div>
             </div>
             <!-- Item 3 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Улун</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__3.svg" alt="icon-catalog__3">
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 ">
+                <p class="font-semibold text-15">Улун</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__3.svg" alt="icon-catalog__3">
+              </div>
             </div>
             <!-- Item 4 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Фруктовый чай</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__4.svg" alt="icon-catalog__4">
-            </div>
-            <!-- Item 5 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <div>
-                <p class="font-semibold text-15">Черный чай</p>
-                <span class="text-xs lg:text-sm/4">ароматизированный</span>
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 ">
+                <p class="font-semibold text-15">Фруктовый чай</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__4.svg" alt="icon-catalog__4">
               </div>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__5.svg" alt="icon-catalog__5">
+            </div>
+
+            <!-- Item 5 -->
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 ">
+                <div>
+                  <p class="font-semibold text-15">Зеленый</p>
+                  <span class="text-xs lg:text-sm/4">ароматизированный</span>
+                </div>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__6">
+              </div>
             </div>
             <!-- Item 6 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <div>
-                <p class="font-semibold text-15">Зеленый чай</p>
-                <span class="text-xs lg:text-sm/4">ароматизированный</span>
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3">
+                <div>
+                  <p class="font-semibold text-15">Черный чай</p>
+                  <span class="text-xs lg:text-sm/4">ароматизированный</span>
+                </div>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__5.svg" alt="icon-catalog__5">
               </div>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__6">
             </div>
             <!-- Item 7 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Пуэр</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__7.svg" alt="icon-catalog__7">
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3">
+                <p class="font-semibold text-15">Пуэр</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__7.svg" alt="icon-catalog__7">
+              </div>
             </div>
             <!-- Item 8 -->
-            <div
-              class="bg-white text-center sm:text-left flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3 rounded-md p-3 lg:p-2 lg:pl-5">
-              <p class="font-semibold text-15">Добавки</p>
-              <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__2">
+            <div class="h-full bg-white text-center sm:text-left rounded-md p-3 lg:p-2 lg:pl-5">
+              <div class="flex flex-col-reverse sm:flex-row items-center sm:justify-between gap-3">
+                <p class="font-semibold text-15">Добавки</p>
+                <img class="size-10 lg:size-16" src="./img/icon-catalog__2.svg" alt="icon-catalog__2">
+              </div>
             </div>
           </div>
         </section>
