--- a/public/catalog.html
+++ b/public/catalog.html
@@ -305,7 +305,7 @@
               Фильтры
             </button>
           </div>
-          
+
           <div class="flex gap-30 mt-4 lg:mt-6">
             <!-- Items -->
             <div class="flex-1 grid grid-cols-2 sm:grid-cols-3 gap-y-6 gap-x-4 lg:gap-x-30">
@@ -824,6 +824,24 @@
                 </div>
               </div>
             </div>
+          </div>
+          <!-- Paginatin -->
+          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-xs lg:text-15 border rounded-md overflow-hidden mt-5 lg:mt-10 mx-auto">
+            <!-- Previous -->
+            <button
+              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">1</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">2</button>
+
+            <button
+              class="text-brand-black-300 w-10 h-full transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">3</button>
+            <!-- Next btn -->
+            <button
+              class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-l px-2.5 py-1">Next</button>
           </div>
         </section>
 
