--- a/public/catalog.html
+++ b/public/catalog.html
@@ -826,7 +826,7 @@
             </div>
           </div>
           <!-- Paginatin -->
-          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-xs lg:text-15 border rounded-md overflow-hidden mt-5 lg:mt-10 mx-auto">
+          <div class="bg-white w-max h-8 lg:h-[2.375rem] flex items-center font-semibold text-center text-xs lg:text-15 border rounded-md overflow-hidden mt-5 lg:mt-10 mx-auto sm:mx-0">
             <!-- Previous -->
             <button
               class="text-brand-black-300 w-20 lg:w-24 h-42 transition duration-200 hover:bg-gray-100 border-r px-2.5 py-1">Previous</button>
